; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/openbsm/bin/auditfilterd/extr_auditfilterd_conf.c_audit_filter_setcookie.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/openbsm/bin/auditfilterd/extr_auditfilterd_conf.c_audit_filter_setcookie.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.auditfilter_module = type { i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @audit_filter_setcookie(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.auditfilter_module*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.auditfilter_module*
  store %struct.auditfilter_module* %7, %struct.auditfilter_module** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = load %struct.auditfilter_module*, %struct.auditfilter_module** %5, align 8
  %10 = getelementptr inbounds %struct.auditfilter_module, %struct.auditfilter_module* %9, i32 0, i32 0
  store i8* %8, i8** %10, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
